K8S/Services/Auth-ClusterIPService.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    service: auth 
  ports:
  - name: http
    protocol: TCP
    port: 5134
    targetPort: 5134
