K8S/Services/File-ClusterIPService.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  selector:
    service: file
  ports:
    - name: http
      protocol: TCP
      port: 5057
      targetPort: 5057
