K8S/Services/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /auth/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 5134
          # - path: /file
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: auth-service
          #       port:
          #         number: 5134
          # - path: /report
          #   pathType: ImplementationSpecific
          #   backend:
          #     resource:
          #       apiGroup: k8s.example.com
          #       kind: StorageBucket
          #       name: icon-assets
          # - path: /search
          #   pathType: ImplementationSpecific
          #   backend:
          #     resource:
          #       apiGroup: k8s.example.com
          #       kind: StorageBucket
          #       name: icon-assets
